tooltips a little different

--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -28,7 +28,7 @@
 		            {% endfor %}
 		        {% endif %}
 				<div class="form-group">
-                    <h4>Enter your email address: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This email address is only for us visible to answer your question."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                    <h4>Enter your email address: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Please enter your email address in order to receive an answer. It will only be used for this specific purpose!"><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
   					<input type="email" class="form-control input-lg" placeholder="Email" name="email" maxlength="255" required/>
   				</div>
                 {% if messages %}
@@ -41,7 +41,7 @@
 		            {% endfor %}
 		        {% endif %}
 				<div class="form-group">
-                    <h4>Enter a headline: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Give a clearly short overview of your question or request."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                    <h4>Enter a headline: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Give a clear, short overview of your question or request."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                     <input type="description" class="form-control input-lg" placeholder="Headline" name="headline" maxlength="30" required></input>
 				</div>
                 {% if messages %}
