--- a/basics/templates/basics/information_new.html
+++ b/basics/templates/basics/information_new.html
@@ -19,7 +19,7 @@
                             {% endif %}
                         {% endfor %}
                     {% endif %}
-					<h4>Headline for your information or question: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This headline will represent your information or question for other user. Give a clearly short overview."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+					<h4>Headline for your information or question: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This headline will represent your information or question for other users. Give a clear, short overview."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
 					<div class="form-group">
 						<input type="description" class="form-control input-lg" placeholder="Headline" name="headline"  rows="4" maxlength="30" required>
 					</div>
@@ -29,7 +29,7 @@
 					</div>
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-sm-5">
-                            <h4>Optional choose a location: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="If you don't choose a location then this information or question will use your standard location which is given in your profil. If you don't like to use your standard location for this information or question choose an other one."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                            <h4>Optional choose a location: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="If you do not want to use your standard location, choose another one, otherwise we will use the standard one!" ><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-4">
                             <div class="form-group">
