--- a/basics/templates/basics/information_update.html
+++ b/basics/templates/basics/information_update.html
@@ -30,13 +30,13 @@
                 {% endif %}
 
                 <div class="form-group">
-                    <h4>Update your information: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Update your description of this information by adding an additional paragraph to your current description. This paragraph doesn't replace your current description."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                    <h4>Update your information: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Update the description of this information by adding a paragraph to your current description. This paragraph does not replace your current description."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
 				    <input type="additional text" class="form-control input-lg" placeholder= "Additional Paragraph" value="{{need.headline}}" name="text"  >
 				</div>
 
                 <div class="row">
                     <div class="col-lg-5 col-md-6 col-sm-8">
-                        <h4>Optinal change the location for this information: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="If you change the location of this information you have to add an additional paragraph to the information."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                        <h4>Optinal change the location for this information: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="If you change the location of this information you have to add a paragraph to the information to explain the change or to point out what has changed."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-4">
                         <div class="form-group">
